--- a/src/Bio/style.sass
+++ b/src/Bio/style.sass
@@ -1,9 +1,10 @@
 @import "../CONSTANTS"
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Jura|Play|Press+Start+2P&display=swap')
 canvas
   display: block
 .bio-holder
   width: 100%
-  min-width: 900px
+  min-width: 980px
   min-height: 2 * $BIO_HEIGHT //700 is min
   height: calc(700px + 100vh)
   background: $BLACK_BACKGROUND //linear-gradient(to bottom, $BLACK_BACKGROUND 0%, $BLACK_BACKGROUND $BIO_HEIGHT, $WHITE_BACKGROUND $BIO_HEIGHT, $WHITE_BACKGROUND 100%) //$BLACK_BACKGROUND
